fix overflow style issue

--- a/src/components/SliderPicker/index.scss
+++ b/src/components/SliderPicker/index.scss
@@ -45,7 +45,7 @@
       height: 51px;
       background-color: #0f9ad7;
       padding: 15px;
-      left: -50px;
+      left: 0px;
       bottom: 50px;
       position: absolute;
       z-index: 1;
